--- a/src/assets/css/globals.css
+++ b/src/assets/css/globals.css
@@ -1,3 +1,7 @@
 .hero-fullscreen-height {
-    height: calc(100vh - 76px);
+    min-height: calc(100vh - 76px);
+}
+
+.hero-fullscreen-height-minus-footer {
+    min-height: calc(100vh - 76px - 100px);
 }
